style: more dark mode fixes

--- a/packages/ui/src/assets/styles/colors.scss
+++ b/packages/ui/src/assets/styles/colors.scss
@@ -16,16 +16,16 @@
   --color-white: #fff;
   --color-gray-light-extra: #f9f8f8;
   --color-gray-light: #f4f4f4;
-  --color-gray: #dfdfdf;
-  --color-gray-dark: #bcbcbc;
-  --color-gray-dark-extra: #777777;
+  --color-gray: #ddd;
+  --color-gray-dark: #aaa;
+  --color-gray-dark-extra: #555;
   --color-black: #000;
 
   --color-success-light: #aeffc0;
   --color-success: #01bd78;
   --color-success-dark: #158a5f;
 
-  --color-error-light: #ffc1c9;
+  --color-error-light: #ff8293;
   --color-error: #d40019;
   --color-error-dark: #8c1725;
 }
